<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top">

    <ImageView
        android:id="@+id/imageViewContact"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_action_account_box"
        android:contentDescription="@string/txt_contact_image_description"/>

    <EditText
        android:id="@+id/editTextContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewContact"
        android:layout_toEndOf="@+id/imageViewContact"
        android:layout_toRightOf="@+id/imageViewContact"
        android:hint="@string/lbl_name"
        android:inputType="textCapWords"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editTextContactPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewContact"
        android:hint="@string/lbl_phone"
        android:inputType="phone"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextContactEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextContactPhone"
        android:hint="@string/lbl_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextContactSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextContactEmail"
        android:hint="@string/lbl_social"
        android:inputType="textUri"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextContactZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextContactSocial"
        android:hint="@string/lbl_zip_code"
        android:inputType="number"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextContactState"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/editTextContactZipCode"
        android:gravity="center"
        android:hint="@string/lbl_uf"
        android:inputType="textCapCharacters"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextContactCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/editTextContactZipCode"
        android:layout_toLeftOf="@id/editTextContactState"
        android:layout_toStartOf="@id/editTextContactState"
        android:hint="@string/lbl_city"
        android:inputType="textCapWords"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextContactNeighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextContactState"
        android:hint="@string/lbl_neighbor"
        android:inputType="textCapWords"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextContactStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextContactNeighborhood"
        android:hint="@string/lbl_street"
        android:inputType="textCapWords"
        android:textSize="20sp"/>
</RelativeLayout>